--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "todo_app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://lucky4030.github.io/todoApp",
   "proxy": "https://us-central1-todoapp-b4b6c.cloudfunctions.net/api",
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -39,6 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "8"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
