--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "proxy": "https://us-central1-todoapp-b4b6c.cloudfunctions.net/api",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "dayjs": "^1.9.3",
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
@@ -35,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "8"
   }
 }
